Added input file and output file arguments

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
       <version>1.18.2</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>com.beust</groupId>
+      <artifactId>jcommander</artifactId>
+      <version>1.72</version>
+    </dependency>
   </dependencies>
 
   <build>
